--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 <body class="body">
     <div class="top">
         <h2 class="name">Typemonk</h2>
+        <div class="lang">
             <p class="bar">rus</p>
             <p class="bar">/</p>
-            <p class="bar">eng</p>   
+            <p class="bar">eng</p> 
+        </div>  
     </div>
     <div class="main">
-        <p class="printed">lksfglskf</p>
-        <p class="example">lksfglskfjghlskhg</p>
+        <div clas="text">
+            <p class="printed">lksfglskf</p>
+            <p class="example">lksfglskfjghlskhg</p>
+        </div>
         <p class="taimer">60 s</p>
     </div>
 </body>
