--- a/index.html
+++ b/index.html
@@ -1,57 +1,24 @@
-
-.top{
-    background-color: #008b8b	;
-    height: 170px;
-    width: 100%;
-    }
-
-.bar{
-    font-family: Inter;
-    font-size: 38px;
-    font-weight: 900;
-    margin-top: 126px;
-    text-align: center;
-    vertical-align: bottom
-    }
-
-.example{
-    color: red;
-    }
-    
-.name{  
-    font-size: 52px; 
-    margin: 0;
-    padding-top: 10px;
-    padding-left: 5px;
-    font-family: comic sans ms;
-}
-
-.taimer{
-    text-align: right;
-    }
-
-.body{
-    margin: 0;
-    padding: 0;
-    }
-
-.lang{
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    top: 0%;
-    height: 170px;
-    width: 100%;
-    }
-.main{
-    background-color: #A9A9A9;
-    height: 910px; 
-    text-align: center; 
-    padding-top: 10%;
-
-    }
-.main p{
-    text-align: center;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+</head>
+<body class="body">
+    <div class="top">
+        <h2 class="name">Typemonk</h2>
+        <div class="lang">
+            <p class="bar">rus</p>
+            <p class="bar">/</p>
+            <p class="bar">eng</p> 
+        </div>  
+    </div>
+    <div class="main">
+        <textarea class="printed"></textarea>
+        <!-- <p class="example">lksfglskssdfsdfsd2324 </p> -->
+    </div>
+<script src="file.js"></script>
+</body>
+</html>
