--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,7 +18,7 @@
     </div>
     <div class="main">
         <textarea class="printed"></textarea>
-        <!-- <p class="example">lksfglskssdfsdfsd2324 </p> -->
+        <p class="example">hello </p>
     </div>
 <script src="file.js"></script>
 </body>
