--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <div class="top">
         <h2 class="name">Typemonk</h2>
         <div class="lang">
-            <p class="bar">rus</p>
+            <p class="bar" id="rus">rus</p>
             <p class="bar">/</p>
-            <p class="bar">eng</p>
+            <p class="bar" id="eng">eng</p>
         </div>
     </div>
     <div class="main">
-        <textarea class="printed"></textarea>
-        <p class="example">hello </p>
+        <h2 class="printed"></h2>
     </div>
     <script src="file.js"></script>
 </body>
